--- a/templates/item_delete.html
+++ b/templates/item_delete.html
@@ -11,7 +11,7 @@
                 <div class="alert alert-danger">
                     <h4>Are you sure you want to delete this item?</h4>
                 </div>
-                <form method="POST" action="">
+                <form method="POST">
                     {% csrf_token %}
                     {{ form }}
                     <a class="btn btn-secondary" href="{% url 'home' %}">Cancel</a>
