--- a/templates/item_edit.html
+++ b/templates/item_edit.html
@@ -10,7 +10,7 @@
                 <h3>Edit Item</h3>
                 <hr>
                 
-                <form method="POST" action="">
+                <form method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <a class="btn btn-secondary" href="{% url 'home' %}">Cancel</a>
