--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,14 +81,14 @@ html {
 .itemDivs {
     border-radius: 10%;
     margin: 1em;
-    min-width: 8em;
-    max-width: fit-content;
+    max-width: 9em;
     max-height: fit-content;
     box-shadow: 0 10px 20px #721c24;
+    word-break: break-all;
 }
 
 .searchBar {
-    max-width: 20em;
+    max-width: 15em;
 }
 
 hr {
