--- a/templates/category_delete.html
+++ b/templates/category_delete.html
@@ -9,7 +9,7 @@
                 <h3>Delete Category</h3>
                 <hr>
                 <div class="alert alert-danger">
-                    <h4>Are you sure you want to delete this category {{ category.name }}?</h4>
+                    <h4>Are you sure you want to delete this category? It will also delete all of it's contents.</h4>
                 </div>
                 <form method="POST">
                     {% csrf_token %}
